[gd_scene load_steps=5 format=2]

[ext_resource path="res://Objects/UI and Menus/Player System/Pause_System.gd" type="Script" id=1]
[ext_resource path="res://Objects/UI and Menus/Player System/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://Objects/UI and Menus/Player System/UpgradeMenu.gd" type="Script" id=3]
[ext_resource path="res://Objects/UI and Menus/Player System/Padded_Label.gd" type="Script" id=4]

[node name="Pause System" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 35.0
margin_right = 5.0
margin_bottom = 35.0
script = ExtResource( 1 )

[node name="PauseMenu" type="PopupMenu" parent="."]
editor/display_folded = true
margin_right = 20.0
margin_bottom = 20.0
custom_constants/vseparation = 5
hide_on_item_selection = false
hide_on_checkable_item_selection = false
script = ExtResource( 2 )

[node name="UpgradeMenu" type="PopupMenu" parent="PauseMenu"]
margin_left = 66.0188
margin_top = 64.6984
margin_right = 86.0188
margin_bottom = 84.6984
mouse_filter = 1
hide_on_item_selection = false
hide_on_checkable_item_selection = false
script = ExtResource( 3 )

[node name="ControlsMenu" type="Popup" parent="PauseMenu"]
editor/display_folded = true
visible = true
margin_right = 500.0
margin_bottom = 500.0

[node name="Panel" type="PanelContainer" parent="PauseMenu/ControlsMenu"]
margin_right = 350.0
margin_bottom = 277.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/ControlsMenu/Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 343.0
margin_bottom = 270.0
custom_constants/separation = 5

[node name="Panel" type="PanelContainer" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer"]
margin_right = 336.0
margin_bottom = 62.0

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 329.0
margin_bottom = 55.0
custom_constants/separation = 75

[node name="Label" type="Label" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel/HBoxContainer"]
margin_right = 63.0
margin_bottom = 48.0
grow_horizontal = 0
text = "
Move Left
"
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel/HBoxContainer"]
margin_left = 138.0
margin_right = 230.0
margin_bottom = 48.0
grow_horizontal = 0

[node name="Label" type="Label" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel/HBoxContainer/VBoxContainer"]
margin_right = 92.0
margin_bottom = 14.0
text = "Input Keys"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 92.0
margin_bottom = 38.0

[node name="Button" type="Button" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 20.0
text = "in1"

[node name="Button2" type="Button" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 20.0
text = "in2"

[node name="Button3" type="Button" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 72.0
margin_right = 92.0
margin_bottom = 20.0
text = "+"

[node name="Panel2" type="PanelContainer" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer"]
margin_top = 67.0
margin_right = 336.0
margin_bottom = 129.0

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 329.0
margin_bottom = 55.0
custom_constants/separation = 75

[node name="Label" type="Label" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel2/HBoxContainer"]
margin_right = 71.0
margin_bottom = 48.0
grow_horizontal = 0
text = "
Move Right
"
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel2/HBoxContainer"]
margin_left = 146.0
margin_right = 238.0
margin_bottom = 48.0
grow_horizontal = 0

[node name="Label" type="Label" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel2/HBoxContainer/VBoxContainer"]
margin_right = 92.0
margin_bottom = 14.0
text = "Input Keys"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel2/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 92.0
margin_bottom = 38.0

[node name="Button" type="Button" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel2/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 20.0
text = "in1"

[node name="Button2" type="Button" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel2/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 20.0
text = "in2"

[node name="Button3" type="Button" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel2/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 72.0
margin_right = 92.0
margin_bottom = 20.0
text = "+"

[node name="Panel3" type="PanelContainer" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer"]
margin_top = 134.0
margin_right = 336.0
margin_bottom = 196.0

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel3"]
margin_left = 7.0
margin_top = 7.0
margin_right = 329.0
margin_bottom = 55.0
custom_constants/separation = 75

[node name="Label" type="Label" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel3/HBoxContainer"]
margin_right = 57.0
margin_bottom = 48.0
grow_horizontal = 0
text = "
Move Up
"
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel3/HBoxContainer"]
margin_left = 132.0
margin_right = 224.0
margin_bottom = 48.0
grow_horizontal = 0

[node name="Label" type="Label" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel3/HBoxContainer/VBoxContainer"]
margin_right = 92.0
margin_bottom = 14.0
text = "Input Keys"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel3/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 92.0
margin_bottom = 38.0

[node name="Button" type="Button" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel3/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 20.0
text = "in1"

[node name="Button2" type="Button" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel3/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 20.0
text = "in2"

[node name="Button3" type="Button" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel3/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 72.0
margin_right = 92.0
margin_bottom = 20.0
text = "+"

[node name="Panel4" type="PanelContainer" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer"]
margin_top = 201.0
margin_right = 336.0
margin_bottom = 263.0

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel4"]
margin_left = 7.0
margin_top = 7.0
margin_right = 329.0
margin_bottom = 55.0
custom_constants/separation = 75

[node name="Label" type="Label" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel4/HBoxContainer"]
margin_right = 75.0
margin_bottom = 48.0
grow_horizontal = 0
text = "
Move Down
"
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel4/HBoxContainer"]
margin_left = 150.0
margin_right = 242.0
margin_bottom = 48.0
grow_horizontal = 0

[node name="Label" type="Label" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel4/HBoxContainer/VBoxContainer"]
margin_right = 92.0
margin_bottom = 14.0
text = "Input Keys"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel4/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 92.0
margin_bottom = 38.0

[node name="Button" type="Button" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel4/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 20.0
text = "in1"

[node name="Button2" type="Button" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel4/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 20.0
text = "in2"

[node name="Button3" type="Button" parent="PauseMenu/ControlsMenu/Panel/VBoxContainer/Panel4/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 72.0
margin_right = 92.0
margin_bottom = 20.0
text = "+"
[connection signal="index_pressed" from="PauseMenu" to="PauseMenu" method="_on_PauseMenu_index_pressed"]
[connection signal="index_pressed" from="PauseMenu/UpgradeMenu" to="PauseMenu/UpgradeMenu" method="_on_PopupMenu_index_pressed"]
